Fix swagger, resp format
